--- a/index.html
+++ b/index.html
@@ -4,39 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Proxy</title>
-    <script id="importantscript">
-        async function handleSubmit() {
-            do_the_thing(document.getElementById('userInput').value);
-        }
-
-        async function do_the_thing(url) {
-
-            try {
-                const response = await fetch(`https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(url)}`);
-
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status} while fetching https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(url)} (${url})`);
-                }
-
-                const data = await response.text();
-
-                if (data.toLowerCase().includes('<!doctype html')) {
-                    document.getElementById('inputContainer').remove();
-                    document.body.innerHTML = data;
-
-                    const script = document.createElement('script');
-                    script.src = 'otherhandling.js';
-                    document.head.appendChild(script);
-
-                } else {
-                    throw new Error(`Unexpected response format (${response.text})`);
-                }
-
-
-            } catch (error) {
-                console.error('Error:', error);
-            }
+    <title>Better Proxy Interface</title>
+    <script>
+        async function handleSubmit(url) {
+            window.location.href = 'redirect/index.html?url=' + encodeURIComponent(url);
         }
     </script>
 </head>
@@ -45,7 +16,13 @@
     <div id="inputContainer" style="font-family: Arial, Helvetica, sans-serif;">
 
         <input type="text" id="userInput" placeholder="Enter website" value='' />
-        <button onclick="handleSubmit()">Submit</button>
+        <button onclick="handleSubmit(document.getElementById('userInput').value)">Submit</button>
+
+<p>Warning: Use this proxy at your own risk!</p>
+<p>This proxy uses another website to route traffic. Some features of the website, like cookies, will be unusable.</p>
+<p>This proxy is intended for basic browsing purposes only. Ensure you do not share sensitive information while using it.</p>
+<p>This proxy may not work with all websites, especially those with advanced security measures or heavy reliance on JavaScript.</p>
+<p>Ensure you comply with the terms of service of the websites you access through this proxy.</p>
 
         <style>
             #userInput {
