--- a/redirect/index.html
+++ b/redirect/index.html
@@ -2,37 +2,46 @@
 <html lang="en">
 
 <head>
+    <!-- Leftover Html Code from main webpage, js from main webpage will still be running to ensure some features work -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Better Proxy</title>
     <script id="importantscript">
 
+        function getUrlParameters() {
+            const params = new URLSearchParams(window.location.search);
+            const url = params.get('url');
+            return url;
+        }
+
+        const url = getUrlParameters();
+        if (url) {
+            do_the_thing(url);
+        }
+
         async function do_the_thing(url) {
 
             try {
-                const response = await fetch(`https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(url)}`);
-
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status} while fetching https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(url)} (${url})`);
-                }
+                const response = await fetch(`https://api.codetabs.com/v1/proxy?quest=${url}`);
 
                 const data = await response.text();
 
                 if (data.toLowerCase().includes('<!doctype html')) {
                     document.body.innerHTML = data;
-
-                    const script = document.createElement('script');
-                    script.src = 'otherhandling.js';
-                    document.head.appendChild(script);
-
-                } else {
-                    throw new Error(`Unexpected response format (${response.text})`);
-                }   
+                    injectscript('linkhandling.js');
+                    injectscript('relativelinks.js');
+                } 
 
 
             } catch (error) {
                 console.error('Error:', error);
             }
+        }
+
+        function injectscript(src){
+            const script = document.createElement('script');
+            script.src = src;
+            document.head.appendChild(script);
         }
     </script>
 </head>
