--- a/redirect/index.html
+++ b/redirect/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Better Proxy</title>
-    <script>const openjs = document.createElement('script');openjs.src = new URL('open.js', window.location.href).href;document.head.appendChild(openjs);</script>
+    <script>const indexjs = document.createElement('script');indexjs.src = new URL('index.js', window.location.href).href;document.head.appendChild(indexjs);</script>
     <!-- End of Leftover Html -->
 </head>
 
