Changed titles to "Proxy"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Proxy Interface</title>
+    <title>Proxy Interface</title>
     <link rel="stylesheet" href="index.css">
     <script>
         function handleSubmit(url) {
