--- a/redirect/index.html
+++ b/redirect/index.html
@@ -5,7 +5,7 @@
     <!-- Leftover Html Code from main webpage, js from main webpage will still be running to ensure some features work -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Proxy</title>
+    <title>Proxy</title>
     <script>const indexjs = document.createElement('script');indexjs.src = new URL('index.js', window.location.href).href;document.head.appendChild(indexjs);</script>
     <!-- End of Leftover Html -->
 </head>
