async function do_the_thing(URL)

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proxy</title>
-    <script>const indexjs = document.createElement('script');indexjs.src = new URL('index.js', window.location.href).href;document.head.appendChild(indexjs);</script>
+    <script>
+        const indexjs = document.createElement('script');
+        indexjs.src = new URL('index.js', window.location.href).href;
+        document.head.appendChild(indexjs);
+    </script>
     <!-- End of Leftover Html -->
 </head>
 
